--- a/labs/lab3/Makefile
+++ b/labs/lab3/Makefile
@@ -3,8 +3,15 @@ all: 2048
 2048: 2048.o input.o direction.o point.o tile.o grid.o game.o
 	g++ -std=c++11 -o 2048 2048.o input.o direction.o point.o tile.o grid.o game.o
 
+test: test.o input.o direction.o point.o tile.o grid.o game.o
+	g++ -std=c++11 -o test test.o input.o direction.o point.o tile.o grid.o game.o
+	./test
+
 2048.o: 2048.cpp
 	g++ -std=c++11 -c 2048.cpp
+
+test.o: test.cpp
+	g++ -std=c++11 -c test.cpp
 
 input.o: input.cpp
 	g++ -std=c++11 -c input.cpp
@@ -25,4 +32,6 @@ game.o: game.cpp
 	g++ -std=c++11 -c game.cpp
 
 clean:
-	rm -f 2048 *.o
+	rm -f 2048 test *.o
+
+.PHONY: test
